<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:guidelineUseRtl="false"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/sign_in"
        style="@style/Title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        style="@style/Info_text_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <EditText
        android:id="@+id/username_input"
        style="@style/Input_text"
        android:layout_width="0dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text="@string/test_username"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/password"
        style="@style/Info_text_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <EditText
        android:id="@+id/password_input"
        style="@style/Input_text"
        android:layout_width="0dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@string/test_password"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/sign_in_btn"
        style="@style/Button"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <Button
        android:id="@+id/sign_up_btn"
        style="@style/Button"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apc_icon_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>