<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SetupSession">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:guidelineUseRtl="false"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bot_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/name_text"
        style="@style/Title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_session"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toTopOf="@+id/top_guide" />

    <ImageButton
        android:id="@+id/cancel_setup_session_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/close"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/name_text"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toTopOf="@+id/name_text"
        app:srcCompat="@drawable/ic_close" />

    <View
        android:id="@+id/setup_session_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="@color/app_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/connect_to_device"
        style="@style/Info_text_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/connect_to_device"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/setup_session_divider" />

    <Button
        android:id="@+id/scan_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/scan"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/connect_to_device" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asap_medium"
        android:text="@string/default_status"
        android:textColor="@color/app_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/scan_btn" />

    <TextView
        android:id="@+id/position_camera"
        style="@style/Info_text_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/position_camera"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/status_text" />

    <ImageView
        android:id="@+id/test_image"
        android:layout_width="340dp"
        android:layout_height="255dp"
        android:layout_marginTop="10dp"
        android:background="@color/app_grey"
        android:padding="0dp"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/position_camera"
        app:srcCompat="@drawable/ic_camera" />

    <Button
        android:id="@+id/check_position_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/check_position"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/test_image" />

    <Button
        android:id="@+id/start_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/app_green"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/check_position_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>