<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SessionInProgress">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:guidelineUseRtl="false"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bot_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/name_text"
        style="@style/Title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_name"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toTopOf="@+id/top_guide" />

    <View
        android:id="@+id/setup_session_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="@color/app_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <Button
        android:id="@+id/pause_resume_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/app_yellow"
        android:duplicateParentState="false"
        android:text="@string/pause"
        app:layout_constraintBottom_toTopOf="@+id/stop_btn"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide" />

    <Button
        android:id="@+id/stop_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/app_red"
        android:text="@string/stop"
        app:layout_constraintBottom_toTopOf="@+id/bot_guide"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/timer_placeholder"
        android:textColor="@color/app_black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/pause_resume_btn"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintStart_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toBottomOf="@+id/setup_session_divider" />

    <ImageButton
        android:id="@+id/notification_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#00FFFFFF"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/setup_session_divider"
        app:srcCompat="@drawable/ic_bell_on" />

</androidx.constraintlayout.widget.ConstraintLayout>